--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver 
@@ -8,4 +8,4 @@ spring:
     password: 
 mybatis:
   type-aliases-package: com.example.demo.vo
-#  mapper-locations: classpath:/mappers/**/*.xml
+  mapper-locations: classpath:/mappers/**/*.xml
